<resources>
    <string name="app_name">Eatogether</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name </string>
    <string name="prompt_last_name">Last Name </string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_re_password">Re-Enter Password </string>
    <string name="prompt_telephone">Telephone Number </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_google_sign_in">Google Sign-In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is not Valid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_unmatch">This Passwords does not match</string>
    <string name="error_invalid_username">Username is not Valid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_client_id">51993492082-ade0iflqmg9l9e7m0lce6j8vo7u5bhva.apps.googleusercontent.com</string>
    <string name="sign_in_err">Unable to Sign-In</string>
    <string name="loading">Loading...</string>
    <string name="facebook_app_id">249784052093955</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="text_favorites">Favourites</string>
    <string name="pick_image_intent_text">Choose Image</string>

</resources>
