<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.applicoders.msp_2017_project.eatogether.ProfileActivity">

    <ProgressBar
        android:id="@+id/edit_profile_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <ScrollView
        android:id="@+id/edit_profile_layoutToHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/default_profile_image"
                    app:civ_border_width="0.5dp"
                    app:civ_border_color="@color/primary_dark"
                    android:layout_gravity="center_horizontal"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_profile_thumb"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/edit_image"
                    app:civ_border_width="0.5dp"
                    app:civ_border_color="@color/primary_dark"
                    android:layout_gravity="center_horizontal|center"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/edit_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rafay Khan"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:layout_gravity="left"
                        />
                    <ImageView
                        android:id="@+id/edit_profile_genderImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/male_icon"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age: 26"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Description"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/edit_profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="7dp"
                    android:scrollbars="vertical"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
                    />
                <Button
                    android:id="@+id/edit_change_passbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:id="@+id/edit_changepass_boxes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_re_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>
